--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,16 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import '~pretty-checkbox/src/pretty-checkbox.scss';
+
 
 // Variables
 @import 'variables';
 @import 'basic';
+@import 'nav';
+@import 'home';
+@import 'form';
+@import 'chat';
+@import 'profile';
+@import 'memory';
+@import 'story';
+
