--- a/resources/sass/_footer.scss
+++ b/resources/sass/_footer.scss
@@ -147,9 +147,9 @@
     margin-bottom: 5px;
   }
   
-  .width{
-    width: 80px;
-  }
+  // .width{
+  //   // width: 80px;
+  // }
   
   /* If you don't want the footer to be responsive, remove these media queries */
   
